<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MoveTrapezoid">

    <TextView
        android:id="@+id/tv_topSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topSide" />

    <EditText
        android:id="@+id/edt_topSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1" />

    <TextView
        android:id="@+id/tv_bottomSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottomSide" />

    <EditText
        android:id="@+id/edt_bottomSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1" />

    <TextView
        android:id="@+id/tv_rightSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rightSide" />

    <EditText
        android:id="@+id/edt_rightSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1" />

    <TextView
        android:id="@+id/tv_leftSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leftSide" />

    <EditText
        android:id="@+id/edt_leftSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1" />

    <TextView
        android:id="@+id/tv_heightTrapezoid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height" />

    <EditText
        android:id="@+id/edt_heightTrapezoid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1" />

    <Button
        android:id="@+id/btn_wideTrapezoid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wide" />

    <Button
        android:id="@+id/btn_aroundTrapezoid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/around" />

    <TextView
        android:id="@+id/tv_resultTrapezoid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>